@@ -1,3 +1,6 @@
+Dec 25, 2005: <l-n@users.sourceforge.net>
+- allow to copy server info values
+
 Dec 13, 2005: <l-n@users.sourceforge.net>
 - add new armyops master server
 
